refactoring proto declaration for chat-server, removed PG
