# internal/api/chat/create.go
@@ -2,26 +2,29 @@ package auth
 
 import (
 	"context"
+	"log"
 
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/emptypb"
 
-	conv "github.com/algol-84/chat-server/internal/converter"
 	desc "github.com/algol-84/chat-server/pkg/chat_v1"
-	"github.com/opentracing/opentracing-go"
+	"github.com/google/uuid"
 )
 
-// Create обрабатывает GRPC запросы на создание нового юзера
-func (i *Implementation) Create(ctx context.Context, req *desc.CreateRequest) (*desc.CreateResponse, error) {
-	span, ctx := opentracing.StartSpanFromContext(ctx, "create api")
-	defer span.Finish()
+// Create обрабатывает GRPC запросы на создание нового чата
+func (i *Implementation) Create(ctx context.Context, _ *emptypb.Empty) (*desc.CreateResponse, error) {
+	// span, _ := opentracing.StartSpanFromContext(ctx, "create api")
+	// defer span.Finish()
 
-	userID, err := i.chatService.Create(ctx, conv.FromChatToService(req.Chat))
+	chatID, err := uuid.NewUUID()
 	if err != nil {
-		return nil, status.Errorf(codes.Internal, "user creation in DB returned with error")
+		return nil, err
 	}
 
+	log.Println(chatID.ID(), chatID.String())
+
+	i.channels[chatID.String()] = make(chan *desc.Message, 100)
+
 	return &desc.CreateResponse{
-		Id: userID,
+		Id: 1, //chatID.String(),
 	}, nil
 }
